# solvwatch

./: Cargo.toml
src/: lib.rs  main.rs
src/app/: mod.rs  rpc_service.rs
src/domain/: entity.rs  repo.rs
src/infra/: mod.rs  repo_impl.rs
src/infra/ratatui/: mod.rs  model.rs  tui.rs  update.rs  view.rs
