[package]
name = "solvwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
polodb_core = "5.1.4"
ratatui = "0.30.0"
serde = "1.0.228"
serde_json = "1.0.149"
solana-client = "3.1.14"
solana-commitment-config = "3.1.1"
tokio = { version = "1.52.1", features = ["full"] }
uuid = "1.23.1"

